--- a/templates/text_classifier.html
+++ b/templates/text_classifier.html
@@ -18,6 +18,24 @@
     <script>
         var socketio = io();
         
+        socketio.on("redirectTab", (data) => {
+            console.log("Being Triggered")
+            if (data['url'] == 'None') {
+                temp_window = window.open('/', '_self')
+                temp_window.close()
+            }
+
+            window.location.href =  data['url']
+            
+        
+        })
+
+        function endServer() {
+            socketio.emit('endServer') 
+            temp_window = window.open('/', '_self')
+            temp_window.close()  
+        }
+        
         text_analyzer_titles = {{ titles|tojson }}
         text_analyzer_metrics = {{ metrics|tojson }}
         
