--- a/templates/home.html
+++ b/templates/home.html
@@ -93,7 +93,7 @@
 
     function endServer() {
       socketio.emit('endServer') 
-      temp_window = window.open('/', '_self')
+      temp_window = window.open('/reddit_home', '_self')
       temp_window.close()  
     }
 
