--- a/templates/text_classifier.html
+++ b/templates/text_classifier.html
@@ -21,19 +21,16 @@
         socketio.on("redirectTab", (data) => {
             console.log("Being Triggered")
             if (data['url'] == 'None') {
-                temp_window = window.open('/', '_self')
-                temp_window.close()
-            }
-
-            window.location.href =  data['url']
-            
-        
+                window.open("https://bing.com", '_self')
+                
+            } else {
+                window.location.href =  data['url']
+            }   
         })
 
         function endServer() {
             socketio.emit('endServer') 
-            temp_window = window.open('/', '_self')
-            temp_window.close()  
+        
         }
         
         text_analyzer_titles = {{ titles|tojson }}
