--- a/templates/reddit_home.html
+++ b/templates/reddit_home.html
@@ -81,19 +81,16 @@
     socketio.on("redirectTab", (data) => {
       console.log("Being Triggered")
       if (data['url'] == 'None') {
-        temp_window = window.open('/', '_self')
-        temp_window.close()
-      }
-
-      window.location.href =  data['url']
-     
-       
+        window.open("https://bing.com", '_self')
+          
+      } else {
+        window.location.href =  data['url']
+      }   
     })
 
     function endServer() {
       socketio.emit('endServer') 
-      temp_window = window.open('/', '_self')
-      temp_window.close()  
+        
     }
     
     function Process() {
